# gacode

./: .gitignore  README.creole
.github/workflows/: main.yml
cgyro/src/: Makefile  cgyro.f90  cgyro_check_memory.F90  cgyro_cleanup.F90  cgyro_equilibrium.F90  cgyro_flux.f90  cgyro_freq.F90  cgyro_globals.F90  cgyro_init.f90  cgyro_init_arrays.F90  cgyro_init_h.f90  cgyro_init_kernel.F90  cgyro_init_manager.F90  cgyro_interface.f90  cgyro_kernel.F90  cgyro_kernel.f90  cgyro_nl_comm.F90  cgyro_nl_fftw.F90  cgyro_read_input.f90  cgyro_read_restart.F90  cgyro_read_restart.f90  cgyro_restart.F90  cgyro_rhs.F90  cgyro_step_collision.F90  cgyro_stress.F90  cgyro_timer_lib.f90  cgyro_write_initdata.f90  cgyro_write_restart.F90  cgyro_write_timedata.f90  cgyro_zftest_em.f90
f2py/: Makefile  meson.build  pyproject.toml  requirements.txt  setup.py
f2py/expro/: Makefile  expro_comm.f90  expro_util.f90
f2py/pygacode/: __init__.py  meson.build
f2py/pygacode/cgyro/: data.py  data_plot.py  data_plot_single.py  meson.build  vis_torcut.py
f2py/pygacode/gyro/: meson.build
f2py/pygacode/neo/: meson.build
f2py/pygacode/profiles_gen/: meson.build
f2py/pygacode/test/: meson.build
f2py/pygacode/tgyro/: meson.build
gato/: gato.f
glf23/src/: Makefile
neo/src/: Makefile  neo_check.f90  neo_do.F90  neo_do.f90  neo_equilibrium.f90  neo_globals.f90  neo_harvest.f90  neo_interface.f90  neo_jbs_nn.f90  neo_jbs_nn.fann.f90  neo_jbsnn_globals.f90  neo_neural.ann.f90  neo_neural.f90  neo_neural.fann.f90  neo_nn_interface.f90  neo_run.F90  neo_run.f90  neo_theory.F90
neo/tools/: neo_boot.py
onetwo/: .cvsignore  Makefile  Statefile_proc.f90  brainfuse.c  brainfuse_mod.F90  brainfuse_mod.f90  co2.i  colrate.f90  comnam.i  contour.f90  cray001.F  cray101.f  cray102.f  cray202.f  cray204.f  cray205.f  cray206.f  cray207.f  cray208.f  cray209.f  cray302.f  cray303.f  cray304.f  cray306.f  cray307.F  cray308.f  cray309_nubeam.f  cray311.f  cray321u.f  cray331.f  cray341.f90  cray352.f  cray401.f  cray402.f  cray403.f  cray404.f  cray501.f  cray504.f  cspline.f  delben.i  (+22 more)
onetwo/.dep_incs/: Collect_stats.f90.inc  MPI_data.F90.inc  Nfreya_output.f90.inc  P_Nfreya_12_interface.f90.inc  P_Nfreya_nubeam_namelist.F90.inc  Statefile_proc.f90.inc  (+217 more)
reg01/: out.gyro.nc
shared/: Makefile
tgyro/: Makefile
(+2525 files in other folders)
